components/styles/Button.module.css
@import url('https://fonts.googleapis.com/css?family=Rubik:700&display=swap');

.buttonSax {
    --bg: #fff;
    --text: #382b22;
    --light-lime: #E2FF76;
    --lime: #DAFF53;
    --dark-lime: #B9E617;
    --lime-border: #485909;
    --lime-shadow: #90B312;


    position: relative;
    display: inline-block;
    cursor: pointer;
    outline: none;
    border: 0;
    vertical-align: middle;
    text-decoration: none;
    font-size: inherit;
    font-family: inherit;

    font-weight: 600;
    color: var(--text);
    text-transform: uppercase;
    padding: 0.8em 1.2em;
    background: var(--light-lime);
    border: 2px solid var(--lime-border);
    border-radius: 0.75em;
    transform-style: preserve-3d;
    transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
}

button.buttonSax::before {
    position: absolute;
    content: '';
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: var(--dark-lime);
    border-radius: inherit;
    box-shadow: 0 0 0 2px var(--lime-border), 0 0.625em 0 0 var(--lime-shadow);
    transform: translate3d(0, 0.75em, -1em);
    transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
}

button.buttonSax:hover {
    background: var(--lime);
    transform: translate(0, 0.25em);
}

button.buttonSax:hover::before {
    box-shadow: 0 0 0 2px var(--lime-border), 0 0.5em 0 0 var(--lime-shadow);
    transform: translate3d(0, 0.5em, -1em);
}

button.buttonSax:active {
    background: var(--lime);
    transform: translate(0em, 0.75em);
}

button.buttonSax:active::before {
    box-shadow: 0 0 0 2px var(--lime-border), 0 0 var(--lime-shadow);
    transform: translate3d(0, 0, -1em);
}

.link {

    font-size: 0.93em;
    font-weight: 740;
    color: var(--text);
    text-transform: uppercase;
    font-family: inherit;
}

.link a:hover {
    text-decoration: none;
}

@media (max-width: 425px) {
    .buttonSax {
        font-size: 0.9em;
        font-weight: 550;
        /* Adjust the font size for smaller screens */
        padding: 0.90em 1.1em;
        /* Adjust padding for smaller screens */
    }
}

@media (max-width: 375px) {
    .buttonSax {
        font-size: 0.9em;
        letter-spacing: -0.02em;
        font-weight: 700;
        /* Adjust the font size for smaller screens */
        padding: 1em 1.2em;
        /* Adjust padding for smaller screens */
    }
}

